# TMAControl-CClient

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure.ac  date_parse.c  date_parse.h  gpio.c  gpio.h  playMessage.c  playMessage.h  ptt.c  ptt.h  signatureCheck.c  signatureCheck.h  tmaClient.c  tmaClient.h
.github/workflows/: codeql-analysis.yml
TMAControl-CClient.xcodeproj/: project.pbxproj
TMAControl-CClient.xcodeproj/xcshareddata/xcschemes/: TMAControl-CClient.xcscheme
hardware/: 03291152.did  04031841.did  TMACONTROL_0.DBK  TMAControl.dsn  TMAControl.opj
hardware/TMAControl-PSpiceFiles/SCHEMATIC1/: SCHEMATIC1.als  SCHEMATIC1.net  SCHEMATIC1_sch.prp  Simulate.sim
hardware/TMAControl-PSpiceFiles/SCHEMATIC1/Simulate/: Simulate.1OP  Simulate.cir  Simulate.mif  Simulate.mrk  Simulate.out.1  Simulate.prb
hardware/TMAControl-PSpiceFiles/SCHEMATIC1/bias/: bias.cir  bias.out.1
hardware/allegro/: allegro.jrl,1  eco.txt  eco.txt,1  last_import_time.txt  master.tag  monitor.sts  netrev.lst  specctra.did  specctra.did,1  specctra.log,1  specctra.log,2  tmacontrol.brd
